--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,10 @@ body {
 }
 
 .bigpic {
-  width: 80%;
-  padding: 0 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 
 .app-container {
@@ -26,7 +28,7 @@ body {
   display: flex;
   align-items: center;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
-  margin-bottom: 300px ;
+  margin-bottom: 2% ;
 }
 /* remove margin bottom */
 .logowrapper {
@@ -51,12 +53,14 @@ padding-left: 50px;
 .section-heading {
   color: #85bcda; /* Dark purple for section headings 4b0082 */
   text-align: center;
+  font-size: xx-large;
   letter-spacing: 3px;
 }
 
 .section-heading1 {
   color: #85bcda; /* Dark purple for section headings 4b0082 */
   text-align: center;
+  font-size: xx-large;
   padding: 0 20px;
   letter-spacing: 3px;
 
@@ -65,22 +69,36 @@ padding-left: 50px;
 .section-heading2 {
   color: #85bcda; /* Dark purple for section headings 4b0082 */
   text-align: center;
+  font-size: xx-large;
   letter-spacing: 3px;
 }
 
 .section-heading3 {
   color: #85bcda; /* Dark purple for section headings 4b0082 */
   text-align: center;
+  font-size: xx-large;
   letter-spacing: 3px;
 }
 
 .section-text {
   color: white;
-  padding: 4%;
+  padding: 0%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
+  font-size: x-large;
+  font: 18px;
   text-align: center;
-  line-height: 2.2;
+  line-height: 3;
 }
 
+.section-textf {
+  color: white;
+  font-size:medium;
+  padding: 0%;
+  text-align: center;
+  line-height: 3;
+}
 .footer {
   margin-top: 20px;
   background-color: #4b0082; /* Dark purple for the footer */
@@ -147,12 +165,12 @@ padding-left: 50px;
 }
 
 .blue-button {
-  background-color: #0000ff; /* Blue */
+  background-color: #0000ff; 
   color: white;
 }
 
 .button-section button:hover {
-  opacity: 0.8; /* Reduce opacity on hover for a subtle effect */
+  opacity: 0.8; 
 }
 
 .what-we-do-section {
@@ -160,9 +178,59 @@ padding-left: 50px;
   grid-template-columns: 1fr 2fr;
 }
 
+
 .grid-3-column {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 30px;
+  font-size: large;
   line-height: 2;
+  position: relative; 
 }
+
+.grid-3-column div {
+  text-align: center; 
+  position: relative; 
+}
+
+.grid-3-column img {
+  position: absolute; 
+  top: -50px; 
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px; 
+}
+
+.navwrapper {
+  position: relative;
+ 
+}
+
+.navwrapper:hover .menu{
+  display: block;
+  
+
+}
+
+.menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 500px;
+  background: white;
+  display: none;
+}
+
+.menu a {
+  display: block;
+  padding: 20px 30px;
+  text-decoration: none;
+
+}
+.menu a:hover {
+  background-color: gray;
+
+}
+
